tests/specs/ecosystem/retraigo/bettermap/1_3_0.test
retraigo/bettermap/1.3.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Map<K, V>'.
  toString(): string {
  ~~~~~~~~
    at file://<tmpdir>/mod.ts:356:3

